@@ -1,6 +1,6 @@
 #!/bin/bash
 
-head -n 3 < POTFILES.in > POTFILES.in.tmp 
+head -n 4 < POTFILES.in > POTFILES.in.tmp 
 grep -v "^[\\[#]" < POTFILES.in | sort >> POTFILES.in.tmp
 mv POTFILES.in.tmp POTFILES.in
 
