@@ -1,3 +1,12 @@
+2008-08-12  Aaron Bockover  <abock@gnome.org>
+
+	* configure.ac: Bump version to 1.2.1
+
+	* NEWS: Update
+
+	* src/Extensions/Banshee.SqlDebugConsole/Makefile.am:
+	* src/Extensions/Makefile.am: Fix build
+
 2008-08-12  Gabriel Burt  <gabriel.burt@gmail.com>
 
 	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Recommendations/RecommendationPane.cs:
